# cmake-example-project

./: .gitignore  readme.md
cross-platform/: CMakeLists.txt  build.sh  build_native.sh  toolchain.cmake  toolchain.cmake.bk
cross-platform/project/: CMakeLists.txt  cmake_test.c
cross-platform/project/camera/: CMakeLists.txt  camera_unit_test.c
cross-platform/project/camera/include/: camera_test.h
cross-platform/project/camera/src/: camera_test.c
cross-platform/project/can/: CMakeLists.txt
cross-platform/project/can/include/: can_test.h
cross-platform/project/can/src/: can_test.c
cross-platform/project/gpio/: CMakeLists.txt
cross-platform/project/gpio/include/: gpio_test.h
cross-platform/project/gpio/src/: gpio_test.c
cross-platform/project/menu/: CMakeLists.txt
cross-platform/project/menu/include/: menu.h
cross-platform/project/menu/src/: menu.c
cross-platform/project/network/: CMakeLists.txt
cross-platform/project/network/include/: network_test.h
cross-platform/project/network/src/: network_test.c
ex1/: CMakeLists.txt  main.c
ex2/: CMakeLists.txt  calc.c  calc.h  main.c
lib1/src/: CMakeLists.txt
lib1/src/app/: CMakeLists.txt  main.c
lib1/src/calc/: CMakeLists.txt  calc.c  calc.h
lib2/src/: CMakeLists.txt  calc.c  calc.h
